// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render component in which tabs have icon and badge 1`] = `
<styled.div
  mobile={false}
  theme={Object {}}
  underline={true}
>
  <styled.div
    left={0}
    theme={Object {}}
    width={0}
  />
  <styled.div
    onKeyDown={[Function]}
    size="big"
    theme={Object {}}
  >
    <styled.div
      active={true}
      key="1"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="2"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <styled.div
        theme={Object {}}
      >
        <icon
          height={24}
          width={24}
        />
      </styled.div>
      <Styled(styled.div)
        badge={false}
        icon={true}
        theme={Object {}}
      >
        Новгород
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="3"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={true}
        icon={false}
        theme={Object {}}
      >
        Орел
      </Styled(styled.div)>
      <styled.div
        theme={Object {}}
      >
        <Component
          kind="neutral-light-inactive"
          size="big"
          value={5}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Tabs should render component with overflowMenu 1`] = `
<styled.div
  mobile={false}
  theme={Object {}}
  underline={true}
>
  <styled.div
    left={0}
    theme={Object {}}
    width={0}
  />
  <styled.div
    onKeyDown={[Function]}
    size="big"
    theme={Object {}}
  >
    <styled.div
      active={true}
      key="1"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="2"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Новгород
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="3"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Орел
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
  <styled.div
    onKeyDown={[Function]}
    size="big"
    theme={Object {}}
  >
    <Component
      innerRef={
        Object {
          "current": null,
        }
      }
      list={
        Array [
          Object {
            "isDisabled": undefined,
            "isSelected": undefined,
            "label": "Самара",
            "value": 4,
          },
          Object {
            "isDisabled": undefined,
            "isSelected": undefined,
            "label": "Липецк",
            "value": 5,
          },
        ]
      }
      menu={
        Object {
          "alignment": "right",
        }
      }
      onChange={[Function]}
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs should render component with required properties 1`] = `
<styled.div
  mobile={false}
  theme={Object {}}
  underline={true}
>
  <styled.div
    left={0}
    theme={Object {}}
    width={0}
  />
  <styled.div
    onKeyDown={[Function]}
    size="big"
    theme={Object {}}
  >
    <styled.div
      active={true}
      key="1"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="2"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Новгород
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="3"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Орел
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Tabs should render component with small size 1`] = `
<styled.div
  mobile={false}
  theme={Object {}}
  underline={true}
>
  <styled.div
    left={0}
    theme={Object {}}
    width={0}
  />
  <styled.div
    onKeyDown={[Function]}
    size="small"
    theme={Object {}}
  >
    <styled.div
      active={true}
      key="1"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="small"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="2"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="small"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Новгород
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="3"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="small"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Орел
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Tabs should render component without underline 1`] = `
<styled.div
  mobile={false}
  theme={Object {}}
  underline={false}
>
  <styled.div
    left={0}
    theme={Object {}}
    width={0}
  />
  <styled.div
    onKeyDown={[Function]}
    size="big"
    theme={Object {}}
  >
    <styled.div
      active={true}
      key="1"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Москва
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="2"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Новгород
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      key="3"
      onClick={[Function]}
      onKeyUp={[Function]}
      size="big"
      tabIndex={0}
      theme={Object {}}
    >
      <Styled(styled.div)
        badge={false}
        icon={false}
        theme={Object {}}
      >
        Орел
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</styled.div>
`;
